update kmp-tor to 2.2.1 and remove runtime module config